# KnowledgeCurator

./: .gitignore  Dockerfile  LLM_ROUTER_DOCUMENTATION.md  SEED_KNOWLEDGE_GRAPH_IMPLEMENTATION.md  pyproject.toml  test_azure_production.py
.github/workflows/: python-kb-dev-agents.yaml  python-kb-prod-agents.yaml  python-kb-stage-agents.yaml
src/agent_search.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/kbcurator/adapters/: wiring.py
src/kbcurator/client/: mcp_client.py
src/kbcurator/data/OtherDemoInstancesseventhreefour/: kv_store_entity_chunks.json  kv_store_relation_chunks.json
src/kbcurator/models/: seed_knowledge_graph.py
src/kbcurator/server/: main.py  server.py  storage_config.py
src/kbcurator/service/: search_agent.py
src/kbcurator/services/: agent_llm_configuration_service.py  llm_router_config_store.py  workspace_provider_credentials_service.py
src/kbcurator/tools/: account_status_tool.py  config.py  ingestion_new.py  kb_adapter_tool.py  kb_curator_chatbot.py  llm_router_tool.py  sharepoint_agent.py  sso_login_tool.py  test_llm_router.py  user_management_system.py
src/kbcurator/utils/: access_validation.py  auth.py  azure_sso.py  azurecustomllm.py  chatbot_context.py  classifier.py  config.py  constants.py  db.py  helpers.py  init_lightrag.py  mcp_service_client.py  mongodb_singleton.py  permission.py  prompt_builder.py  request_context.py  session_history_manager.py  sharepoint_manager.py  sso_jwt.py
